--- a/public/index.html
+++ b/public/index.html
@@ -3,12 +3,11 @@
 
 <head>
 	<meta charset="UTF-8">
-	<title>Socket.IO whiteboard</title>
+	<title>Whiteboard</title>
 	<link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-
 	<canvas class="whiteboard"></canvas>
 	<div>
 		<input type="button" id="clear" value="Clear">
